Final-Project-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydevops-service
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
